# tspaint

./: .gitignore  .gitmodules  .nojekyll  CLAUDE.md  README.md  build_singer.md  gwf.md  ils.md  introgression_map.md  introgression_map.py  other-lai-tools.md  paral-assess.md  pyproject.toml  robots.txt  search.json  sitemap.xml  workflow.py
.claude/agents/: code-api-consistency-reviewer.md  code-frontend-reviewer.md  code-python-reviewer.md  code-theming-reviewer.md  code-ui-heuristics-reviewer.md
.claude/commands/: review-apply.md  review-init.md  review.md
.claude/review-reports/: adversarial-review.md
.github/workflows/: conda-release.yml
api/: EnsembleRateThroughTime.html  FitResult.html  GhostResult.html  Painting.html  RateThroughTime.html  SoftTrack.html  WindowedPainting.html  accumulate.SuffStats.html  accumulate.accumulate_sufficient_statistics.html  archaic.ArchaicResult.html  benchmark.export_vcf.html  benchmark.run.html  benchmark.score.html  benchmark.setup.html  benchmark.tool_status.html  bp.bp_paint.html  bp.bp_smooth.html  bp.bp_smooth_track.html  bp.bp_vs_deadband_experiment.html  branch_stats.branch_expected_stats.html  branch_stats.branch_kernel.html  branch_stats.stats_from_kernel.html  branch_stats.vanloan_integral.html  compare.head_to_head.html  compare.nearest_reference_paint.html  compare.rfmix_paint.html  compare.score_painter.html  compare.tspaint_paint.html  dating.accumulate_time_binned.html  dating.accumulate_time_binned_tv.html  dating.branch_cell_stats.html  dating.cell_centers.html  dating.composite_transition.html  dating.directional_rate_splines.html  dating.fit_poisson_spline.html  dating.log_time_grid.html  dating.make_Q_of_cell.html  dating.paint_qt.html  dating.rate_through_time_binned.html  dating.select_lambda_gcv.html  (+93 more)
conda-build/: meta.yaml
docs/: README.md  _quarto.yml  objects.txt
docs/_inv/: griffe_objects.txt  numpy_objects.txt  python_objects.txt
docs/api/: EnsembleRateThroughTime.qmd  FitResult.qmd  GhostResult.qmd  Painting.qmd  RateThroughTime.qmd  SoftTrack.qmd  WindowedPainting.qmd  _sidebar.yml  accumulate.SuffStats.qmd  accumulate.accumulate_sufficient_statistics.qmd  archaic.ArchaicResult.qmd  benchmark.export_vcf.qmd  benchmark.run.qmd  benchmark.score.qmd  benchmark.setup.qmd  benchmark.tool_status.qmd  bp.bp_paint.qmd  bp.bp_smooth.qmd  bp.bp_smooth_track.qmd  bp.bp_vs_deadband_experiment.qmd  branch_stats.branch_expected_stats.qmd  branch_stats.branch_kernel.qmd  branch_stats.stats_from_kernel.qmd  branch_stats.vanloan_integral.qmd  compare.head_to_head.qmd  compare.nearest_reference_paint.qmd  compare.rfmix_paint.qmd  compare.score_painter.qmd  compare.tslai_paint.qmd  compare.tspaint_paint.qmd  dating.accumulate_time_binned.qmd  dating.accumulate_time_binned_tv.qmd  dating.branch_cell_stats.qmd  dating.cell_centers.qmd  dating.composite_transition.qmd  dating.directional_rate_splines.qmd  dating.fit_poisson_spline.qmd  dating.log_time_grid.qmd  dating.make_Q_of_cell.qmd  dating.paint_qt.qmd  (+98 more)
docs/notebooks/: baboon_analysis.ipynb  baboons.ipynb  bench_Ne_diverg.ipynb  bench_admix_time.ipynb  bench_impure_refs.ipynb  bench_ref_proxies.ipynb  bp_smoother.ipynb  calibration.ipynb  dating.ipynb  fragmentation.ipynb  inference_regimes.ipynb  introgression_qc.ipynb  neanderthal_power.ipynb  painting.ipynb  showcase.ipynb
docs/pages/: assumptions.qmd  code_paths.qmd  dating.qmd  inference.qmd  model.qmd  overview.ipynb  overview.qmd  results.qmd
examples/: phasic_seam.py  workflow.py
explore/: rung2_profile.py  rung4_profile.py  rung5_scenarios.py  rung6_calibration.py  rung6_singer_diag.py  rung_paint_qt.py  spline_resolution.py
notebooks/: 00_persistence_check.ipynb  01_sim_admixture_truth.ipynb  02_calibration_flicker.ipynb  03_regimes_and_scaling.ipynb  baboons.html  bench_Ne_diverg.html  bench_admix_time.html  bench_impure_refs.html  bench_ref_proxies.html  bp_smoother-preview.html  bp_smoother.html  bp_smoother.out.ipynb  calibration-preview.html  calibration.html  calibration.out.ipynb  dating-preview.html  dating.html  dating.ipynb  dating.out.ipynb  fragmentation-preview.html  fragmentation.html  fragmentation.out.ipynb  inference_regimes.html  introgression_qc.html  neanderthal_power.html  painting-preview.html  painting.html  painting.out.ipynb  showcase.html
notes/: admix_dating_design.md
pages/: assumptions.html  code_paths.html  dating.html  inference.html  model.html  overview.html  results.html
plans/: PLAN_A_workflows.md  PLAN_B_archaic_detector.md  PLAN_PUBLICATION.md
review-kit/: README.md  TEMPLATE_AUTHORS.md  USAGE.md
scripts/: gen_docs_notebooks.py  github-release.sh
src/tslai/: __init__.py  accumulate.py  api.py  branch_stats.py  compare.py  diagnostics.py  em.py  ensemble.py  experiments.py  io.py  io_relate.py  io_rfmix.py  io_singer.py  io_tsinfer.py  metrics.py  model.py  output.py  pruning.py  ranked.py  sim.py  validate.py
src/tspaint/: __init__.py  accumulate.py  api.py  archaic.py  branch_stats.py  cli.py  compare.py  em.py  ensemble.py  experiments.py  ids.py  install.py  introgression.py  io.py  io_argweaver.py  io_genotypes.py  io_relate.py  io_rfmix.py  io_singer.py  io_tsinfer.py  metrics.py  model.py  output.py  parallel.py  pruning.py  ranked.py  serialize.py  (+3 more)
tests/: conftest.py  test_accumulate.py  test_api.py  test_archaic.py  test_argweaver.py  test_benchmark_cli.py  test_benchmark_common.py  test_benchmark_export_score.py  test_benchmark_gnomix.py  test_benchmark_integration.py  test_benchmark_new_painters.py  test_benchmark_parsers.py  test_benchmark_setup.py  test_benchmark_singer.py  test_benchmark_tspaint.py  test_bp.py  test_branch_stats.py  test_bugfixes.py  test_chrx.py  test_cli.py  test_cli_singer.py  test_compare.py  test_credibility.py  test_dating.py  test_em.py  test_ensemble.py  test_estimate_ne.py  test_experiment.py  test_frame.py  test_ids.py  test_inferred.py  test_install.py  test_install_paths.py  test_introgression.py  test_io_frontends.py  test_m_step.py  test_mask.py  test_output.py  test_parallel.py  test_phasic_dropin.py  (+12 more)
(+32 files in other folders)
