[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "munch-group-library"
version = "0.1.16"
description = "Project description"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.14"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/munch-group/munch-group-library"
Repository = "https://github.com/munch-group/munch-group-library"
Documentation = "https://munch-group.org/munch-group-library"

[project.scripts]
munch-group-library = "munch_group_library:munch_group_library"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.setuptools.package-data]
munch_group_library = ["data/*.txt", "data/*.csv", "data/*.pickle", "data/*.h5"]

[tool.pixi.workspace]
channels = ["conda-forge", "munch-group"]
platforms = ["osx-arm64",  "linux-64"]

[tool.pixi.dependencies]
python = ">=3.9,<3.14"
pytest = "*"
jupyter = "*"
quarto = "*"
quartodoc = "*"
nbconvert = "*"
anthropic = "*"
pip = ">=25.2,<26"
nodejs = ">=20,<23"
git = "*"
git-lfs = "*"
gh = "*"
ipython = "*"
seaborn = "*"
nbdime = ">=4.0.2,<5"
vscodenb = "*"
r-rsvg = "*"

# [tool.pixi.pypi-dependencies]
# munch-group-library = { path = ".", editable = true }

[tool.pixi.environments]
default = {solve-group = "default"}

[tool.pixi.tasks.init]
cmd = "python ./scripts/rename.py && gh repo set-default https://github.com/munch-group/$(basename $(git rev-parse --show-toplevel)) && git add src && git add -u"

[tool.pixi.tasks.install-dev]
cmd = "pip install --no-build-isolation --force-reinstall --no-deps ."
description = "Development install"

[tool.pixi.tasks.notebook]
args = [ { "arg" = "notebook" } ]
cmd = "jupyter nbconvert --log-level=WARN --to notebook --execute --inplace --TagRemovePreprocessor.enabled=True --TagRemovePreprocessor.remove_cell_tags='{\"skip-execution\"}' {{ notebook }}"

[tool.pixi.tasks.api]
cmd = "./scripts/docs-build-render.sh"
description = "Build quartodoc api doc pages"

[tool.pixi.tasks.docs]
cmd = "./scripts/docs-run-notebooks.sh"
description = "Execute documentation notebooks in-place"

[tool.pixi.tasks.clean]
cmd = "git clean -id"
description = "Removes untracked files and directories but respects your .gitignores"

[tool.pixi.tasks.test]
cmd = "mkdir -p tests/pytest/tmp && jupyter nbconvert docs/pages/tutorial/*.ipynb --to script --TagRemovePreprocessor.enabled=True --TagRemovePreprocessor.remove_cell_tags='{\"skip-execution\"}' --output-dir tests/pytest/tmp && pytest tests/pytest/"
description = "Run tests"

[tool.pixi.tasks.commit]
cmd = "./scripts/git-commit.sh"

[tool.pixi.tasks.bump]
args = [
  { "arg" = "kind", "default" = "patch" },  # can be patch, minor, major
  { "arg" = "flag", "default" = "" },     # can be --pre, --release
]
cmd = "./scripts/bump_version.py --{{ kind }} {{ flag }} && git add pyproject.toml && git commit -m '{{ kind }} {{ flag }} version bump'"

[tool.pixi.tasks.release]
args = [
  { "arg" = "kind", "default" = "patch" },  # can be patch, minor, major
  { "arg" = "flag", "default" = "" },     # can be --pre, --release
]
cmd = "./scripts/bump_version.py --{{ kind }} {{ flag }} && git add pyproject.toml && git commit -m '{{ kind }} {{ flag }} version bump' && git push && ./scripts/github-release.sh"
description = "Bump version patch and push tag to build/upload conda/pypi packages"

[tool.pixi.tasks.version]
args = [
  { "arg" = "kind", "default" = "patch" },  # can be patch, minor, major
  { "arg" = "flag", "default" = "" },     # can be --pre, --release
]
cmd = "./scripts/bump_version.py --{{ kind }} {{ flag }} && git add pyproject.toml && git commit -m '{{ kind }} {{ flag }} version bump' && git push && ./scripts/github-release.sh"
depends-on = ["test", "api", "docs", "commit"]
description = "Bump version patch and push tag to build/upload conda/pypi packages"

