[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tspaint"
version = "0.1.16"
description = "Project description"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.14"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tskit>=0.5",
    "msprime>=1.3",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/munch-group/tspaint"
Repository = "https://github.com/munch-group/tspaint"
Documentation = "https://munch-group.org/tspaint"

# [project.scripts]
# tspaint = "tspaint:cli"  # TODO: console entry point once a CLI exists

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.setuptools.package-data]
tspaint = ["data/*.txt", "data/*.csv", "data/*.pickle", "data/*.h5"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["slow: heavy end-to-end / ARG-inference tests (deselect with -m 'not slow')"]

[tool.pixi.workspace]
channels = ["conda-forge", "munch-group"]
platforms = ["osx-arm64",  "linux-64"]

[tool.pixi.dependencies]
python = ">=3.9,<3.14"
tskit = "*"
msprime = "*"
numpy = "*"
scipy = "*"
pytest = "*"
jupyter = "*"
quarto = "*"
quartodoc = "*"
nbconvert = "*"
anthropic = "*"
pip = ">=25.2,<26"
nodejs = ">=20,<23"
git = "*"
git-lfs = "*"
gh = "*"
ipython = "*"
seaborn = "*"
nbdime = ">=4.0.2,<5"
vscodenb = "*"
r-rsvg = "*"
tsinfer = ">=0.5.1,<0.6"
demesdraw = ">=0.4.1,<0.5"

[tool.pixi.pypi-dependencies]
tspaint = { path = ".", editable = true }

# External LAI comparators for the head-to-head (CLAUDE.md §9), isolated from the core env.
# bioconda is scoped to this feature only (not the workspace) so it cannot perturb the
# default env's resolution — only `compare` sees it.
[tool.pixi.feature.compare]
channels = ["conda-forge", { channel = "bioconda", priority = -1 }]

[tool.pixi.feature.compare.dependencies]
rfmix = "*"

[tool.pixi.environments]
default = {solve-group = "default"}
# `compare` carries only the external comparator binaries (rfmix + its gcc/fontconfig
# toolchain), kept out of the default env so they can't perturb the core scientific stack.
# The Python painter runs in `default` and shells out to .pixi/envs/compare/bin/rfmix
# (same pattern as io_singer for SINGER). Own solve-group → independent lock.
compare = {features = ["compare"], no-default-feature = true, solve-group = "compare"}

[tool.pixi.tasks.init]
cmd = "python ./scripts/rename.py && gh repo set-default https://github.com/munch-group/$(basename $(git rev-parse --show-toplevel)) && git add src && git add -u"

[tool.pixi.tasks.install-dev]
cmd = "pip install --no-build-isolation --force-reinstall --no-deps ."
description = "Development install"

[tool.pixi.tasks.notebook]
args = [ { "arg" = "notebook" } ]
cmd = "jupyter nbconvert --log-level=WARN --to notebook --execute --inplace --TagRemovePreprocessor.enabled=True --TagRemovePreprocessor.remove_cell_tags='{\"skip-execution\"}' {{ notebook }}"

[tool.pixi.tasks.api]
cmd = "./scripts/docs-build-render.sh"
description = "Build quartodoc api doc pages"

[tool.pixi.tasks.docs]
cmd = "./scripts/docs-run-notebooks.sh"
description = "Execute documentation notebooks in-place"

[tool.pixi.tasks.clean]
cmd = "git clean -id"
description = "Removes untracked files and directories but respects your .gitignores"

[tool.pixi.tasks.test]
cmd = "pytest -q tests/"
description = "Run tests"

[tool.pixi.tasks.commit]
cmd = "./scripts/git-commit.sh"

[tool.pixi.tasks.bump]
args = [
  { "arg" = "kind", "default" = "patch" },  # can be patch, minor, major
  { "arg" = "flag", "default" = "" },     # can be --pre, --release
]
cmd = "./scripts/bump_version.py --{{ kind }} {{ flag }} && git add pyproject.toml && git commit -m '{{ kind }} {{ flag }} version bump'"

[tool.pixi.tasks.release]
args = [
  { "arg" = "kind", "default" = "patch" },  # can be patch, minor, major
  { "arg" = "flag", "default" = "" },     # can be --pre, --release
]
cmd = "./scripts/bump_version.py --{{ kind }} {{ flag }} && git add pyproject.toml && git commit -m '{{ kind }} {{ flag }} version bump' && git push && ./scripts/github-release.sh"
description = "Bump version patch and push tag to build/upload conda/pypi packages"

[tool.pixi.tasks.version]
args = [
  { "arg" = "kind", "default" = "patch" },  # can be patch, minor, major
  { "arg" = "flag", "default" = "" },     # can be --pre, --release
]
cmd = "./scripts/bump_version.py --{{ kind }} {{ flag }} && git add pyproject.toml && git commit -m '{{ kind }} {{ flag }} version bump' && git push && ./scripts/github-release.sh"
depends-on = ["test", "api", "docs", "commit"]
description = "Bump version patch and push tag to build/upload conda/pypi packages"

